--- a/my-app/src/styles.module.css
+++ b/my-app/src/styles.module.css
@@ -19,9 +19,12 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
 	padding: 0 1.5em 2em;
 	min-height: 100vh;
+}
+
+.root:last-child {
+	justify-self: flex-end;
 }
 
 /* -
